deployment/edge/MobileNetV2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-mobilenetv2
  labels:
    app: inference-mobilenetv2
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inference-mobilenetv2
      version: v1
  template:
    metadata:
      labels:
        app: inference-mobilenetv2
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: inference-mobilenetv2
          imagePullPolicy: "IfNotPresent"
          image: rdsea/inference:cpu
          ports:
            - containerPort: 5012
          args: ["--model", "MobileNetV2"]
          resources:
            requests:
              cpu: "1500m"
              memory: "200Mi"
            limits:
              cpu: "2000m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mobilenetv2-service
spec:
  ports:
    - port: 5012
      targetPort: 5012
  selector:
    app: inference-mobilenetv2
