deployment/edge/ensemble.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ensemble
  labels:
    app: ensemble
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ensemble
      version: v1
  template:
    metadata:
      labels:
        app: ensemble
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: ensemble
          imagePullPolicy: "IfNotPresent"
          image: rdsea/ensemble
          ports:
            - containerPort: 5011
          resources:
            requests:
              cpu: "300m"
              memory: "150Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ensemble-service
spec:
  ports:
    - port: 5011
      targetPort: 5011
  selector:
    app: ensemble
