deployment/edge/jaeger_collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: observe
  labels:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/version: 1.53.0
    helm.sh/chart: jaeger-3.4.1
  annotations:
    io.cilium/global-service: "true"
    meta.helm.sh/release-name: jaeger
    meta.helm.sh/release-namespace: observe
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger
  ports:
    - name: grpc
      port: 14250
      protocol: TCP
      targetPort: grpc
      appProtocol: grpc
    - name: http
      port: 14268
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: otlp-grpc
      port: 4317
      protocol: TCP
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      protocol: TCP
      targetPort: otlp-http
    - name: admin
      port: 14269
      protocol: TCP
      targetPort: admin
