deployment/edge/preprocessing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprocessing
  labels:
    app: preprocessing
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: preprocessing
      version: v1
  template:
    metadata:
      labels:
        app: preprocessing
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: preprocessing
          imagePullPolicy: "IfNotPresent"
          image: rdsea/preprocessing
          ports:
            - containerPort: 5010
          resources:
            requests:
              cpu: "250m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: preprocessing-service
spec:
  ports:
    - port: 5010
      targetPort: 5010
  selector:
    app: preprocessing
